@@ -121,6 +121,9 @@ Version 2.1.1
    - Bugfix: Displaying popup data correctly
    - Some additional include files added for FreeBSD
    - Macro TEMP_FAILURE_RETURN provided for systems that don't have it
+   - Bugfix: Once mail is displayed set mailbox status to MAILBOX_OLD
+   - Bugfix: Note only those mails for displaying that will be displayed
+        (local mailboxes)
 
 Version 2.1.0
  * Nicolas Rougier
